# trainsign

./: .gitignore  Pipfile  __init__.py  dev_requirements.txt  open511.py  producer.py  pyproject.toml  requirements.txt  trainsign.example.yml
.devcontainer/: devcontainer.json
api_examples/: StopMonitoring.json  holidays.json  lines.json  operators.json  patterns.json  stops.json  stoptimetable.json  timetables.json
open511/: __init__.py  base_schema.py  client.py  holidays.py  operators.py  stop_monitoring.py  test_client.py
open511/cassettes/: test_holidays.yaml  test_lines.yaml  test_operator_client.yaml  test_stop_monitoring.yaml  test_stop_places.yaml  test_stops.yaml  test_timetable.yaml  test_vehicle_monitoring.yaml
src/open511/: client.py
src/open511/cassettes/: test_operators.yaml  test_patterns.yaml  test_stop_timetable.yaml
src/trainsign/: __init__.py  cli.py  config.py  test_sign.py
src/trainsign/cassettes/: test_visit_stream.yaml
trainsign/: __init__.py  config_schema.py  display_manager.py  test_sign.py  visit_schema.py  visit_stream.py
trainsign/cassettes/: test_filtertron.yaml  test_sign_display.yaml
