[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "trainsign"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "marshmallow",
    "pyyaml",
    "pyserial",
    "jinja2",
    "fire",
]
dynamic = ["version"]

[project.scripts]
trainsign = "trainsign.cli:main"

